fixing spacing of nav and featured work on home page

--- a/css/about.css
+++ b/css/about.css
@@ -55,10 +55,10 @@
   }
   
   .navigation.homepage {
-    margin-top: 20px;
+    margin-top: 0px;
     margin-right: 0px;
     margin-left: 0px;
-    padding-top: 0px;
+    padding-top: 20px;
     padding-right: 0px;
     padding-left: 0px;
     background-color: rgba(255, 255, 255, 0);
