--- a/css/index.css
+++ b/css/index.css
@@ -18,10 +18,10 @@
   }
   
   .navigation.homepage {
-    margin-top: 20px;
+    margin-top: 0px;
     margin-right: 0px;
     margin-left: 0px;
-    padding-top: 0px;
+    padding-top: 20px;
     padding-right: 0px;
     padding-left: 0px;
     background-color: rgba(255, 255, 255, 0);
@@ -180,7 +180,7 @@
   .intro {
     position: relative;
     top: 50%;
-    min-height: 100vh;
+    min-height: 94vh;
     margin-right: 60px;
     margin-left: 60px;
   }
@@ -220,6 +220,7 @@
   .featured {
     margin-right: 60px;
     margin-left: 60px;
+    padding-top: 6vh;
   }
   
   .h2 {
